# Indoor-Localization-Capstone-Project

./: .gitignore  README.md
Final Lab Files/: 1.txt
Position Calculation/: CalculatePosition.py  ConnectionManager.py  Line.py  Position.py  README.md  Receiver.py  ReceiverData.py  output.txt  sampleOut.json
Wirlab files/: swifi_rx.py  swifi_rx_softdec.grc  swifi_rx_wirlab.grc  swifi_tx.grc  wifi_tx.grc  wifi_tx.py
Wirlab files/gr-swifi/: CMakeLists.txt
Wirlab files/gr-swifi/cmake/Modules/: swifiConfig.cmake
Wirlab files/gr-swifi/docs/: README.swifi
Wirlab files/gr-swifi/docs/doxygen/: Doxyfile.in
Wirlab files/gr-swifi/docs/doxygen/other/: group_defs.dox  main_page.dox
Wirlab files/gr-swifi/examples/: README  UpdateTextCallback.m  compare_softdec.grc  constants.txt  file_fft.grc  file_to_tx.grc  gen_long_preamble_diff.grc  gen_long_sym.grc  plotap.m  rx_to_file.grc  swifi_detect_preamble.grc  swifi_rx.grc  swifi_rx.py  swifi_rx_softdec.grc  swifi_tx.grc  swifi_tx.py  tx_timed_from_file.grc
Wirlab files/gr-swifi/grc/: CMakeLists.txt  swifi_bit_inserter.xml  swifi_bit_packer.xml  swifi_bit_stealer.xml  swifi_bit_unpacker.xml  swifi_bitmetrics_computer.xml  swifi_bitmetrics_inserter.xml  swifi_bitmetrics_interleaver.xml  swifi_chunks_to_symbols.xml  swifi_constellation_decoder.xml  swifi_dsss_frame_sync.xml  swifi_dsss_frame_sync_2.xml  swifi_fd_noise_adder.xml  swifi_frame_filter.xml  swifi_frame_samples_extractor.xml  swifi_header_payload_demux.xml  swifi_header_payload_demux_2.xml  swifi_interleaver.xml  swifi_mac_frame_generator.xml  swifi_ofdm_chan_est.xml  swifi_ofdm_equalizer.xml  swifi_ofdm_frame_sync.xml  swifi_payload_parser.xml  swifi_peak_gate.xml  swifi_phy_frame_generator.xml  swifi_sample_adder.xml  swifi_sample_marker.xml  swifi_scrambler.xml  swifi_stream_pack.xml  swifi_tx_time_tag_adder.xml  swifi_unpack_lsb.xml  swifi_vector_valve.xml  swifi_wifi_conv_decoder.xml  swifi_wifi_conv_encoder.xml  swifi_wifi_conv_soft_decoder.xml
Wirlab files/gr-swifi/include/swifi/: CMakeLists.txt  api.h  bit_inserter.h  bit_packer.h  bit_stealer.h  bit_unpacker.h  bitmetrics_computer.h  bitmetrics_inserter.h  bitmetrics_interleaver.h  chunks_to_symbols.h  constellation_decoder.h  constellation_metrics.h  dsss_frame_sync.h  dsss_frame_sync_2.h  dynamic_rate_block.h  fd_noise_adder.h  frame_filter.h  frame_samples_extractor.h  header_payload_demux.h  header_payload_demux_2.h  interleaver.h  mac_frame_generator.h  mac_frame_info.h  mac_parser.h  mac_utils.h  ofdm_chan_est.h  ofdm_equalizer.h  ofdm_frame_sync.h  ofdm_phy_header_parser.h  payload_parser.h  peak_gate.h  phy_frame_generator.h  phy_utils.h  sample_adder.h  sample_marker.h  scrambler.h  stream_pack.h  tag_utils.h  tx_time_tag_adder.h  unpack_lsb.h  (+8 more)
Wirlab files/gr-swifi/lib/: CMakeLists.txt  bit_inserter_impl.cc  bit_inserter_impl.h  bit_packer_impl.cc  bit_packer_impl.h  bit_stealer_impl.cc  bit_stealer_impl.h  bit_unpacker_impl.cc  bit_unpacker_impl.h  bitmetrics_computer_impl.cc  bitmetrics_computer_impl.h  bitmetrics_inserter_impl.cc  bitmetrics_inserter_impl.h  bitmetrics_interleaver_impl.cc  bitmetrics_interleaver_impl.h  chunks_to_symbols_impl.cc  chunks_to_symbols_impl.h  constellation_decoder_impl.cc  constellation_decoder_impl.h  diffmodem.cc  diffmodem.h  dsss_frame_sync_2_impl.cc  dsss_frame_sync_2_impl.h  dsss_frame_sync_impl.cc  dsss_frame_sync_impl.h  dynamic_rate_block.cc  extract.cc  fd_noise_adder_impl.cc  fd_noise_adder_impl.h  frame_filter_impl.cc  frame_filter_impl.h  frame_samples_extractor_impl.cc  frame_samples_extractor_impl.h  framefilter.cc  header_payload_demux_2_impl.cc  header_payload_demux_2_impl.h  header_payload_demux_impl.cc  header_payload_demux_impl.h  interleaver_impl.cc  interleaver_impl.h  (+66 more)
Wirlab files/gr-swifi/python/: CMakeLists.txt  __init__.py  qa_bit_packer_unpacker.py  qa_encoding.py  qa_interleaver.py  qa_mac_utils.py  qa_phy_utils.py  qa_puncturing.py  qa_sample_adder.py  qa_scrambler.py  qa_stream_pack.py  qa_wifi_conv_endecoder.py  utils.py
Wirlab files/gr-swifi/swig/: CMakeLists.txt  swifi_swig.i
Wirlab files/rx_multi/: -30d_2.5m_00.txt  -30d_2.5m_01.txt  -30d_2.5m_02.txt  -30d_2.5m_03.txt  -30d_2.5m_04.txt  0d_2.5m_00.txt  0d_2.5m_01_(good).txt  0d_2.5m_02.txt  0d_2.5m_03.txt  0d_2.5m_04_(good+40).txt  rx_multi.grc  rx_multi.py  test_result.txt
Wirlab files/spectrum_plot/: functions.py  test_AoA.py
Wirlab files/spectrum_plot/Data/: -45degrees@2m.txt  .help.txt.swo  0degrees@5m.txt  help.txt
Wirlab files/tx_working/: wifi_tx.grc  wifi_tx.py
backend/: app.js  package-lock.json  package.json  sampleOut.json
backend/controllers/: analysis.controller.js  changes.controller.js  index.controller.js  receiverval.controller.js
backend/models/: analysis.model.js  csi.model.js  receiver.model.js
backend/routes/: analysis.js  changes.js  index.js  receiverval.js
scripts/: 2.txt  3.txt  4.txt  data.txt  packetToDatabase.py
visualization/: package-lock.json  package.json  report.20200325.122347.8080.0.001.json  report.20200325.123336.16816.0.001.json  report.20200331.143437.12304.0.001.json
visualization/public/: index.html
visualization/src/: App.js  sampleOut.json
visualization/src/components/: AnalysisReport.js  Chart.js  CurrentRun.js  Dashboard.js  Deposits.js  HowItWorks.js  Motivation.js  Orders.js  RecentResults.js  RunSimulation.js  Setup.js  currentRun.js  listitems.js
